syntax = "proto3";

package proto;

service MisBi {
    rpc Bi(BiLog) returns (BiResult) {}
}

message BiLog {
    string projectName = 1;
    string actionName = 2;
    int64 timestamp = 3;
    bytes detail = 4;
}

message BiResult {
    bool result = 1;
    string msg = 2;
}

